# minesweeper

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  build.sh  generate_ppt.py  index.html  minesweeper  minesweeper.cpp  minesweeper.js  run.bat  run.sh  script.js  style.css  踩地雷報告.pptx  踩地雷遊戲_專題報告.pptx
.github/workflows/: build-windows.yml
include/: board.h  cell.h  display.h  game.h
src/: board.cpp  cell.cpp  display.cpp  game.cpp  main.cpp
